# Lab02_NUSP

./: .gitignore  .user.yml  Dockerfile  Dockerfile.superset  Importar_CSV.py  Notes.txt  README.md  docker-compose.yml  pipeline.py  pipeline_old.py  profiles.yml
app/: dbt_project.yml  pipeline.py  requirements.txt
dags/: dbt_pipeline.py
data/metrics/: metrics.csv
data/raw/: acidentes_2026.csv
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: .ge_store_backend_id  acidentes_checkpoint.yml
great_expectations/expectations/: .ge_store_backend_id  acidentes_suite.json
great_expectations/uncommitted/data_docs/local_site/: index.html
great_expectations/uncommitted/validations/: .ge_store_backend_id
lab02_dbt/: .user.yml  README.md  dbt_project.yml
lab02_dbt/macros/: classificar_gravidade.sql
lab02_dbt/models/: dim_localidade.sql  fct_acidentes.sql  stg_acidentes.sql  teste.sql
lab02_dbt/models/marts/: schema.yml
lab02_dbt/models/staging/: sources.yml
lab02_dbt/tests/: test_data_futura.sql  test_vitima_negativa.sql
models/marts/: dim_localidade.sql  fct_acidentes.sql
models/staging/: stg_acidentes.sql
seeds/: acidentes_rodovias_2026.csv
teste_volume/: Dockerfile  arquivo2.txt  arquivo3.txt  docker-compose.yml  pipeline.py  pyproject.toml  requirements.txt  script.py  script2.py
teste_volume/great_expectations/expectations/: .ge_store_backend_id
teste_volume/teste_volume/: pyproject.toml
venv_dbt/: pyvenv.cfg
venv_dbt/Scripts/: activate  activate.bat  daff.py
(+1 files in other folders)
